2010-11-26  Francois Suter  <francois@typo3.org>

	* Fixed bug #16573: Register count_MENUOBJ is not properly initialized

2010-11-26  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #16317: [scheduler] Valid values generated from cron command does not contain integers only (Thanks to Marcus Krause)

2010-11-25  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #16319: [scheduler] CronCmd class variable "values" does not contain integers only (Thanks to Marcus Krause)

2010-11-25  Jigal van Hemert  <jigal@xs4all.nl>

	* Fixed bug #16322: Incorrect regexp in substituteMarkerArray

2010-11-25  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up to bug #16431: htmlArea RTE: in WebKit, clicking on image does not select it
	* Fixed bug #16571: htmlArea RTE: Configured height of link and image dialogue windows not honoured

2010-11-24  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #16124: htmlArea RTE: Links are incorrectly updated in Google Chrome

2010-11-24  Jigal van Hemert <jigal@xs4all.nl>

	* Fixed bug #16560: Hide mod_menu of record listing in page module if not needed (Thanks to Georg Ringer)

2010-11-23  Steffen Ritter  <typo3@steffen-ritter.net>

	* Fixed bug #16518: Extra frame after default password change, link from reports module (Thanks to Kevin Walter)
	* Fixed bug #16517: t3lib_beFunc::getRecordWSOL() does not use it's param $useDeleteClause in else branch

2010-11-22  Jigal van Hemert <jigal@xs4all.nl>

	* Fixed bug #14974: Extra frame after default password change, link from welcome screen (Thanks to Kevin Walter)

2010-11-19  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up to bug #16431: htmlArea RTE: in WebKit, clicking on image does not select it

2010-11-17  Francois Suter  <francois@typo3.org>

	* Fixed bug #16147: getRecordOverlay fetches "Versioning Preview Overlay" but does not return the fields _ORIG_uid and _ORIG_pid (Thanks to Andreas Kiessling)

2010-11-16  Stanislas Rolland  <typo3@sjbr.ca>
